--- a/src/pages/activity/activity.scss
+++ b/src/pages/activity/activity.scss
@@ -1,3 +1,10 @@
 page-activity {
+    .scroll-content {
+        overflow: hidden;
+    }
+    #map {
+        width: 100%;
+        height: 40%;
+    }
 
 }
