--- a/src/pages/activity-display/activity-display.scss
+++ b/src/pages/activity-display/activity-display.scss
@@ -2,7 +2,7 @@ page-activity-display {
   .scroll-content {
     overflow: hidden;
   }
-  #map {
+  .map {
     width: 100%;
     height: 65%;
   }
